style: fix about page width shift

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -29,7 +29,10 @@
   --r-full: 9999px;
 }
 
-html { color-scheme: light; }
+html {
+  color-scheme: light;
+  scrollbar-gutter: stable;
+}
 
 body {
   margin: 0;
